2009-09-30  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::setAttributesColumnEnabled):
	New feature: the GUI can show brief summary of object attributes
	in the second column in the object tree. This is controlled by a
	checkbox in the global preferences dialog, tab "Objects". This is
	off by default. The first column always shows object icon and its
	name, the second (optional) column shows its attributes. Interface
	label is shown in the second column. The width of both columns in
	the tree is set automatically to accommodate all the text, then
	can be adjusted by the user using mouse. Column width is saved in
	settings and will be restored upon program restart. Column width
	is saved per-file, per-library.

2009-09-23  vadim  <vadim@vk.crocodile.org>

	* ../src/res/configlets/linux24/update_bonding: Generated iptables
	script incrementally updates bonding interfaces:

	- It creates new bonding interfaces with parameters configured in
	the GUI if module 'bonding' is not loaded. This is what happens
	if fwbuilder script runs after reboot.

	- if there are no bonding interfaces in fwbuilder configuration,
	the script removes bonding module to kill any bonding interfaces
	that might exist on the machine

	- if you add new bonding interface in fwbuilder, the script checks
	if it exists on the machine. It will not create it because to do
	so, it would have to remove the module which kills other bonding
	interfaces. If this second bonding interface exists, it will be
	configured with slaves and addresses. If it does not exist, script
	aborts. In this case you need to either 1) reload module manually
	or 2) add max_bonds=2 to /etc/modules.conf and reboot or 3) unload
	module and run fwbuilder script again (if module is not loaded,
	the script loads it with correct max_bonds parameter)

	- if a bonding interface exists on the machine but not in
	fwbuilder configuration, the script removes all slaves from it and