@@ -94,12 +94,12 @@ namespace fwcompiler
 	void insertFailoverRule();
 
         libfwbuilder::PolicyRule* addMgmtRule(
-            libfwbuilder::Address* const src,
-            libfwbuilder::Address* const dst,
-            libfwbuilder::Service* const service,
-            libfwbuilder::Interface* const iface,
-            libfwbuilder::PolicyRule::Direction direction,
-            libfwbuilder::PolicyRule::Action action,
+            libfwbuilder::Address* src,
+            libfwbuilder::Address* dst,
+            libfwbuilder::Service* service,
+            libfwbuilder::Interface* iface,
+            const libfwbuilder::PolicyRule::Direction direction,
+            const libfwbuilder::PolicyRule::Action action,
             const std::string label,
             const bool related = false);
         
